--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fabianbormann/meerkat",
+  "name": "@cardananium/meerkat",
   "version": "1.0.17",
   "description": "Browser-to-browser networking built on WebTorrent",
   "main": "dist/meerkat.min.js",
